// This file is part of fm-weck: executing fm-tools in containerized environments.
// https://gitlab.com/sosy-lab/software/fm-weck
//
// SPDX-FileCopyrightText: 2024 Dirk Beyer <https://www.sosy-lab.org>
//
// SPDX-License-Identifier: Apache-2.0

// TODO: include this file from fm-weck repo without duplicating

syntax = "proto3";

// This service runs fm-weck remotely.

service FmWeckRemote {
  // Runs a verification task for a given C program.
  rpc startRun(RunInfo) returns (RunID) {}

  // Cancels a previously started run.
  rpc cancelRun(RunID) returns (Empty) {}

  // Gets the result of a previously started run using its unique ID.
  rpc waitOnRun(WaitParameters) returns (stream File) {}

  // Query for a number of result files.
  rpc queryFiles(stream FileName) returns (stream File) {}
}

message ToolType {
  optional string tool_version = 1;
  oneof tool_data {
    File tool_file = 2;
    string tool_id = 3;
  }
}

message Property {
  oneof property {
    string property_id = 1;
    File property_file = 2;
  }
}

message RunInfo {
  ToolType tool = 1;
  Property property = 2;
  bytes c_program = 4;
  string data_model = 5;
}

message RunID {
  string run_id = 1;
}

message WaitParameters {
  int32 timelimit = 1;
  RunID run_id = 2;
}

message FileName {
  oneof FileName {
    string name = 1;
    string name_pattern = 2;
  }

  RunID run_id = 3;
}

message File {
  string name = 1;
  bytes file = 2;
}

message Empty {}


option java_package = "fm_weck.generated";